toggle-slider applied

--- a/style.css
+++ b/style.css
@@ -127,6 +127,49 @@ input[type="range"]::-webkit-slider-thumb {
   text-align: center;
   color: #848ead;
 }
+.switch input {
+  opacity: 0;
+}
+
+.switch {
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background: #cfd8ef;
+  border-radius: 15px;
+  margin-left: 12px;
+  margin-right: 12px;
+  position: relative;
+}
+
+.toggle-slider {
+  position: absolute;
+  border-radius: 25px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: all 2 ease;
+}
+
+.toggle-slider:hover {
+  background-color: rgba(16, 216, 196, 1);
+}
+
+.toggle-slider::before {
+  content: "";
+  position: absolute;
+  background: #ffffff;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  left: 3px;
+  top: 3px;
+}
+
+.switch input:checked + .toggle-slider::before {
+  transform: translateX(25px);
+}
 
 .views {
   font-family: "Manrope";
@@ -151,6 +194,7 @@ input[type="range"]::-webkit-slider-thumb {
   text-align: center;
   color: #ff8d68;
   padding: 2px 6px 3px 7px;
+  margin-left: 5.5px;
 }
 
 .line {
