--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap");
 
 body {
+  padding-top: 89px;
   width: 100vw;
   height: 100vh;
   background: #ffffff;
@@ -12,13 +13,13 @@ body {
 .circles {
   position: absolute;
   margin: 0 auto;
-  left: 30%;
-  top: -4%;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 57px;
   z-index: -100;
 }
 
 header {
-  margin-top: 89px;
   margin-bottom: 64px;
 }
 h1 {
@@ -51,6 +52,9 @@ main {
   width: 87.2%;
   margin: 0 auto;
 }
+.mobile {
+  display: none;
+}
 
 .paying-condition {
   padding: 34px 24px 38px 24px;
@@ -68,7 +72,7 @@ main {
   gap: 5px;
 }
 
-.price-component {
+.desktop {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -77,7 +81,7 @@ main {
   gap: 10px;
 }
 
-.price-component p {
+.desktop p {
   font-family: "Manrope";
   font-style: normal;
   font-weight: 800;
@@ -167,10 +171,6 @@ input[type="range"]::-webkit-slider-thumb {
   cursor: pointer;
 }
 
-/* .toggle-slider:hover {
-  background-color: rgba(16, 216, 196, 1);
-} */
-
 .toggle-slider::before {
   content: "";
   position: absolute;
@@ -201,6 +201,8 @@ input[type="range"]::-webkit-slider-thumb {
   color: #848ead;
 }
 .discount {
+  display: flex;
+  align-self: start;
   background: #feede8;
   border-radius: 9.5px;
   font-family: "Manrope";
@@ -213,11 +215,18 @@ input[type="range"]::-webkit-slider-thumb {
   padding: 2px 6px 3px 7px;
   margin-left: 5.5px;
 }
+.for-mobile {
+  display: flex;
+}
+.for-desktop {
+  display: none;
+}
 
 .line {
   width: 100%;
   height: 1px;
   background: #ecf0fb;
+  margin-top: 38px;
 }
 .box {
   padding: 24px 80px 32px 77px;
@@ -254,4 +263,91 @@ input[type="range"]::-webkit-slider-thumb {
   padding: 12px 36px;
   border: transparent;
   cursor: pointer;
+}
+
+@media screen and (min-width: 1440px) {
+  header h1 {
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 800;
+    font-size: 28px;
+    line-height: 38px;
+    text-align: center;
+  }
+
+  header p {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+  }
+
+  main {
+    width: 37.5%;
+  }
+
+  .box {
+    flex-direction: row;
+    padding: 32px 44px 33px 48px;
+    justify-content: space-between;
+  }
+  .bullets {
+    margin-bottom: 0;
+  }
+  .desktop {
+    display: none;
+  }
+  .mobile {
+    display: flex;
+    align-items: center;
+  }
+
+  .billing-period {
+    margin-top: 40px;
+    margin-left: 80px;
+    gap: 16px;
+  }
+  .paying-condition {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .view-price {
+    padding: 40px 48px 40px 46px;
+  }
+
+  .pageviews {
+    margin-bottom: 0px;
+  }
+  .pageviews span,
+  .views {
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 2px;
+  }
+  .month {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    color: #848ead;
+  }
+  .mobile p {
+    font-size: 40px;
+    line-height: 55px;
+    text-align: right;
+    letter-spacing: -1px;
+  }
+
+  .discount {
+    gap: 5px;
+  }
+  .for-mobile {
+    display: none;
+  }
+  .for-desktop {
+    display: block;
+  }
 }
